# software-identify

./: .gitignore  CMakeLists.txt  README.md
src/: identify.cpp  identify.h
test/: CMakeLists.txt  identify_test.cpp
